// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dummy.js format[flow]} 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`test.js format[flow]} 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./dummy');
var xxx = 0;
xxx

=====================================output=====================================
require("./dummy");
var xxx = 0;
xxx;

================================================================================
`;
